@@ -68,7 +68,7 @@ class ArrayCollection(list):
 
     def __writeamf__(self, output):
         output.encoder.writeList(
-            list(self), use_references=True, use_proxies=False)
+            list(self), use_proxies=False)
 
     def _get_length(self):
         return len(self)
