@@ -8,6 +8,8 @@ versions of PyAMF.
 
 0.6 (unreleased)
 ----------------
+- ``use_references`` keyword arg has been removed from ``amf3.Encoder.write*``
+  (Ticket:713)
 - ``ClassAlias.getEncodableAttributes`` now will return a single dict of
   properties (Ticket:714)
 - PyAMF Client will raise an exception if the remote gateway returns a service
